# sinpapel

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.es.md  README.md  SECURITY.md  __init__.py  apps.py  cache.py  decorators.py  exceptions.py  forms.py  index.html  injection.py  json_logic.py  mixins.py  mkdocs.yml  objects.inv  pyproject.toml  registry.py  signals.py
.github/workflows/: ci.yml  docs.yml
api/: index.html
development/: index.html
development/changelog/: index.html
development/contributing/: index.html
development/security/: index.html
docs/: USAGE.es.md  index.md
docs/api/: index.md
docs/development/: changelog.md  contributing.md  index.md
docs/superpowers/plans/: 2026-05-11-sinpapel-cleanup.md  2026-05-12-metadatos-capturables.md  2026-05-14-form-serializer-factory.md  2026-05-14-preview-transition.md  2026-05-14-state-timers-sla.md  2026-05-14-transition-predicates.md  2026-05-16-readme-publication.md  2026-05-17-dx-ci-hardening.md  2026-05-17-mkdocs-site.md
docs/superpowers/specs/: 2026-05-12-metadatos-capturables-design.md  2026-05-14-state-timers-preview-transition-design.md  2026-05-14-transition-predicates-form-factory-design.md  2026-05-16-readme-publication-design.md  2026-06-25-requisito-documental-enforce-design.md
docs/usage/: en.md  es.md  index.md
management/commands/: sinpapel_export_flujo.py  sinpapel_import_flujo.py  sinpapel_verificar_slas.py
migrations/: 0001_initial.py  0002_condiciontransicion.py  0002_extract_remaining_models.py  0003_historical_records.py  0003_slaconfiguracion.py  0004_historicalinstanciadocumento_porcentaje_and_more.py  0005_historicalinstanciadocumento_archivo_and_more.py  0006_remove_seguimientoworkflow_monto_aprobado.py
models/: __init__.py  attachments.py  documents.py  predicates.py  signatures.py  sla.py  workflow.py
schemas/: __init__.py  flujo_export.py
search/: search_index.json
services/: __init__.py  predicate_engine.py  side_effects.py  sla_engine.py  workflow_engine.py
signing/: __init__.py  dto.py  exceptions.py  factory.py  ports.py
signing/backends/: __init__.py  fake.py  fiel.py  manual.py
superpowers/plans/2026-05-11-sinpapel-cleanup/: index.html
superpowers/plans/2026-05-12-metadatos-capturables/: index.html
superpowers/plans/2026-05-14-form-serializer-factory/: index.html
superpowers/plans/2026-05-14-preview-transition/: index.html
superpowers/plans/2026-05-14-state-timers-sla/: index.html
superpowers/plans/2026-05-14-transition-predicates/: index.html
superpowers/plans/2026-05-16-readme-publication/: index.html
superpowers/plans/2026-05-17-dx-ci-hardening/: index.html
superpowers/plans/2026-05-17-mkdocs-site/: index.html
superpowers/specs/2026-05-12-metadatos-capturables-design/: index.html
superpowers/specs/2026-05-14-state-timers-preview-transition-design/: index.html
superpowers/specs/2026-05-14-transition-predicates-form-factory-design/: index.html
superpowers/specs/2026-05-16-readme-publication-design/: index.html
superpowers/specs/2026-06-25-requisito-documental-enforce-design/: index.html
tests/: apps.py  conftest.py  models.py  settings.py  test_cache.py  test_cache_integration.py  test_decorator.py  test_evaluar_requisitos_documentales.py  test_flow_portability.py  test_forms_factory.py  test_i18n.py  test_instanciadocumento_archivo.py  test_migrations.py  test_mixins.py  test_no_creditos_dep.py  test_predicates.py  test_preview_transition_injection.py  test_registry.py  test_requisito_documental_enforce.py  test_serializers_factory.py  test_side_effects.py  test_signals.py  test_signals_module.py  test_sla.py  test_workflow_engine.py
tests/fixtures/: flujo_v0_1.json
tests/migrations/: 0001_initial.py  0002_testformmodel.py  0003_testcapturable_testemptyschema_testcatalogomodel_and_more.py
tests/test_history/: test_configuracion_transicion_history.py  test_instancia_documento_history.py  test_migration_reversibility.py  test_registro_firma_history.py  test_requisito_estado_history.py  test_version_flujo_history.py
tests/test_signing/: test_factory.py  test_fake_backend.py  test_fiel_backend.py  test_manual_backend.py  test_ports.py
usage/: index.html
usage/en/: index.html
usage/es/: index.html
