[project]
name = "sinpapel"
version = "0.1.1"
description = "Workflow + audit trail + digital signature engine for Django (extraído desde creditos/E12)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Julio Adrián", email = "jadrian.s@gmail.com" },
]
keywords = ["django", "workflow", "audit", "signature", "fiel", "tramites"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=5.0",
    "django-simple-history>=3.5",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-django>=4.12",
]

[project.urls]
Homepage = "https://github.com/jadrians/creditos"
Issues = "https://github.com/jadrians/creditos/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Layout: flat — pyproject.toml + package files at repo root (post split E16).
# package_dir mapea el package "sinpapel" a la cwd actual (.).
# Subpackages declarados explícitamente (mantiene determinismo + visibilidad).
[tool.setuptools]
packages = [
    "sinpapel",
    "sinpapel.management",
    "sinpapel.management.commands",
    "sinpapel.migrations",
    "sinpapel.mixins",
    "sinpapel.models",
    "sinpapel.schemas",
    "sinpapel.services",
    "sinpapel.signing",
    "sinpapel.signing.backends",
]

[tool.setuptools.package-dir]
sinpapel = "."
"sinpapel.management" = "management"
"sinpapel.management.commands" = "management/commands"
"sinpapel.migrations" = "migrations"
"sinpapel.mixins" = "."
"sinpapel.models" = "models"
"sinpapel.schemas" = "schemas"
"sinpapel.services" = "services"
"sinpapel.signing" = "signing"
"sinpapel.signing.backends" = "signing/backends"

[tool.setuptools.package-data]
sinpapel = ["py.typed"]
"sinpapel.migrations" = ["*.py"]
