[project]
name = "sinpapel"
version = "0.5.1"
description = "Versioned workflows, immutable audit, and pluggable e-signatures for Django."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Julio Adrián", email = "jadrian.s@gmail.com" },
]
keywords = [
    "django",
    "workflow",
    "state-machine",
    "audit-trail",
    "electronic-signature",
    "compliance",
    "paperless",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Groupware",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=5.0",
    "django-simple-history>=3.5",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-django>=4.12",
    "build>=1.2",
    "twine>=5.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

# URLs intentionally omitted until a public repo URL is decided.
# Before the first PyPI publish, uncomment and fill in:
# [project.urls]
# Homepage  = "https://example.com/sinpapel"
# Source    = "https://example.com/sinpapel"
# Issues    = "https://example.com/sinpapel/issues"
# Changelog = "https://example.com/sinpapel/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

# Layout: flat — pyproject.toml + package files at repo root.
# package_dir maps the package "sinpapel" to the current working directory (.).
# Subpackages are declared explicitly (deterministic + visible).
[tool.setuptools]
packages = [
    "sinpapel",
    "sinpapel.management",
    "sinpapel.management.commands",
    "sinpapel.migrations",
    "sinpapel.mixins",
    "sinpapel.models",
    "sinpapel.schemas",
    "sinpapel.services",
    "sinpapel.signing",
    "sinpapel.signing.backends",
]

[tool.setuptools.package-dir]
sinpapel = "."
"sinpapel.management" = "management"
"sinpapel.management.commands" = "management/commands"
"sinpapel.migrations" = "migrations"
"sinpapel.mixins" = "."
"sinpapel.models" = "models"
"sinpapel.schemas" = "schemas"
"sinpapel.services" = "services"
"sinpapel.signing" = "signing"
"sinpapel.signing.backends" = "signing/backends"

[tool.setuptools.package-data]
sinpapel = ["py.typed"]
"sinpapel.migrations" = ["*.py"]

[tool.pyright]
include = ["."]
exclude = [
    "tests",
    "docs",
    "site",
    ".venv",
    "__pycache__",
    ".pytest_cache",
]
pythonVersion = "3.10"
pythonPlatform = "Linux"
venvPath = ".venv"
venv = ".venv"
